--- a/app/views/login/preloaded.jade
+++ b/app/views/login/preloaded.jade
@@ -3,4 +3,4 @@
   alt='{{StandBy.config.profile.title}}')
   h4 {{ui.login.setting_up_app}}
   .progress.progress-striped.active: .progress-bar
-  span.muted
+  span.text-muted
