--- a/app/views/messages/compose.jade
+++ b/app/views/messages/compose.jade
@@ -61,7 +61,7 @@ form(ng-controller='scheaduler')
 
 			.control-group(ng-hide='scheaduleCount > 0')
 				label.control-label {{ui.message.notifications}}
-				p.muted
+				p.text-muted
 					small
 						i {{ui.message.notificationsEmpty}}
 
