--- a/app/views/messages/inbox.jade
+++ b/app/views/messages/inbox.jade
@@ -53,7 +53,7 @@ div(ng-show='(messages.inbox[page.inbox] | filter:query.inbox).length > 0')
 				| {{ui.message.paginationNext}} »
 	br
 	br
-	span.muted.pull-right
+	span.text-muted.pull-right
 		small
 			i
 				| {{ui.message.paginationPage}}: {{page.inbox + 1}} {{ui.message.paginationOf}}
