--- a/app/views/messages/outbox.jade
+++ b/app/views/messages/outbox.jade
@@ -49,7 +49,7 @@ div(ng-show='(messages.outbox[page.outbox] | filter:query.outbox).length > 0')
 				| {{ui.message.paginationNext}} »
 	br
 	br
-	span.muted.pull-right
+	span.text-muted.pull-right
 		small
 			i
 				| {{ui.message.paginationPage}}: {{page.outbox + 1}} {{ui.message.paginationOf}}
