--- a/app/views/messages/trash.jade
+++ b/app/views/messages/trash.jade
@@ -56,7 +56,7 @@ div(ng-show='(messages.trash[page.trash] | filter:query.trash).length > 0')
 				| {{ui.message.paginationNext}} »
 	br
 	br
-	span.muted.pull-right
+	span.text-muted.pull-right
 		small
 			i
 				| {{ui.message.paginationPage}}: {{page.trash + 1}} {{ui.message.paginationOf}}
