--- a/app/views/dashboard/alarms.jade
+++ b/app/views/dashboard/alarms.jade
@@ -26,9 +26,9 @@ div.widget
   p(ng-hide='loading.alerts')
     small.pull-left
       span.text-warning {{ui.planboard.lastSyncTime}}
-      span.muted {{synced.alarms | nicelyDate}}
+      span.text-muted {{synced.alarms | nicelyDate}}
     br
     small.pull-left
       span.text-warning Capcode(s):
-      span.muted {{capcodes}}
-      span.muted(ng-hide='capcodes') {{StandBy.config.profile.p2000.codes}}
+      span.text-muted {{capcodes}}
+      span.text-muted(ng-hide='capcodes') {{StandBy.config.profile.p2000.codes}}
