--- a/app/views/tv.jade
+++ b/app/views/tv.jade
@@ -39,7 +39,7 @@ section#dashboard(style='margin-top: -40px;')
 			p(ng-hide='loading.smartAlarm')
 				small.pull-left
 					span.text-warning {{ui.planboard.lastSyncTime}}
-					span.muted {{saSynced | nicelyDate}}
+					span.text-muted {{saSynced | nicelyDate}}
 
 		.widget.col-md-3(ng-show='StandBy.config.profile.p2000.status')
 			.head
@@ -61,7 +61,7 @@ section#dashboard(style='margin-top: -40px;')
 								p {{alarm.body}}
 						tr
 							td
-								small.muted
+								small.text-muted
 									i {{alarm.msgCode}}
 							td
 								span.label.label-natural.pull-right {{alarm.day}} {{alarm.time}}
@@ -69,8 +69,8 @@ section#dashboard(style='margin-top: -40px;')
 			p(ng-hide='loading.alerts')
 				small.pull-left
 					span.text-warning {{ui.planboard.lastSyncTime}}
-					span.muted {{synced.alarms | nicelyDate}}
+					span.text-muted {{synced.alarms | nicelyDate}}
 				br
 				small.pull-left
 					span.text-warning Capcode(s):
-					span.muted {{StandBy.config.profile.p2000.codes}}
+					span.text-muted {{StandBy.config.profile.p2000.codes}}
