--- a/app/styles/app/_timeline.scss
+++ b/app/styles/app/_timeline.scss
@@ -1324,265 +1324,135 @@ div.timeline-event-range {
   color: #ccc;
 }
 
+
+//=====================================
+// https://github.com/mgcrea/bootstrap-additions
+// Using for angular-strap
 /*
-  Datepicker for Bootstrap
-  Copyright 2012 Stefan Petre
-  Licensed under the Apache License v2.0
-  http://www.apache.org/licenses/LICENSE-2.0
-*/
-.datepicker {
-  z-index: 99999;
-  top: 0;
-  left: 0;
-  padding: 4px;
-  margin-top: 1px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  /*.dow { border-top: 1px solid #ddd !important; }*/
+ * Datepicker element
+ */
+.datepicker.dropdown-menu {
+  width: 250px;
+  height: 270px;
+}
+.datepicker.dropdown-menu button {
+  outline: none;
+  border: 0px;
+}
+.datepicker.dropdown-menu tbody {
+  height: 180px;
+}
+.datepicker.dropdown-menu tbody button {
+  padding: 6px;
+}
+.datepicker.dropdown-menu.datepicker-mode-1 tbody button,
+.datepicker.dropdown-menu.datepicker-mode-2 tbody button {
+  height: 65px;
+}
+.modal.center .modal-dialog {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  min-width: 320px;
+  max-width: 630px;
+  width: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
 }
 
-.datepicker:before {
-  content: '';
-  display: inline-block;
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  border-bottom: 7px solid #ccc;
-  border-bottom-color: rgba(0, 0, 0, 0.2);
-  position: absolute;
-  top: -7px;
-  left: 6px;
+/*
+ * Popovers corner placement
+ *
+ * Inherit exotic positionning from basic ones & fix arrow placement
+ */
+.popover.top-left {
+  margin-top: -10px;
 }
-
-.datepicker:after {
-  content: '';
-  display: inline-block;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-bottom: 6px solid #fff;
-  position: absolute;
-  top: -6px;
-  left: 7px;
+.popover.top-left .arrow {
+  left: 50%;
+  margin-left: -11px;
+  border-bottom-width: 0;
+  border-top-color: #999999;
+  border-top-color: rgba(0, 0, 0, 0.25);
+  bottom: -11px;
+  left: 10%;
 }
-
-.datepicker > div {
-  display: none;
+.popover.top-left .arrow:after {
+  content: " ";
+  bottom: 1px;
+  margin-left: -10px;
+  border-bottom-width: 0;
+  border-top-color: #ffffff;
 }
-
-.datepicker table {
-  width: 100%;
-  margin: 0;
+.popover.top-right {
+  margin-top: -10px;
 }
-
-.datepicker td, .datepicker th {
-  text-align: center;
-  width: 20px;
-  height: 20px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+.popover.top-right .arrow {
+  left: 50%;
+  margin-left: -11px;
+  border-bottom-width: 0;
+  border-top-color: #999999;
+  border-top-color: rgba(0, 0, 0, 0.25);
+  bottom: -11px;
+  left: 90%;
 }
-
-.datepicker td.day:hover {
-  background: #eee;
-  cursor: pointer;
+.popover.top-right .arrow:after {
+  content: " ";
+  bottom: 1px;
+  margin-left: -10px;
+  border-bottom-width: 0;
+  border-top-color: #ffffff;
 }
-
-.datepicker td.old, .datepicker td.new {
-  color: #999;
+.popover.bottom-left {
+  margin-top: 10px;
 }
-
-.datepicker td.active, .datepicker td.active:hover {
-  background-color: #006dcc;
-  background-image: 0;
-  // background-image: 0 to(#0044cc));
-  background-image: linear-gradient(top, #0088cc, #0044cc);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc',
-          GradientType=0);
-  border-color: #04c #04c #002a80;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-  color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+.popover.bottom-left .arrow {
+  left: 50%;
+  margin-left: -11px;
+  border-top-width: 0;
+  border-bottom-color: #999999;
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  top: -11px;
+  left: 10%;
 }
-
-.datepicker td.active:hover, .datepicker td.active:hover:hover, .datepicker td.active:active,
-.datepicker td.active:hover:active, .datepicker td.active.active,
-.datepicker td.active:hover.active, .datepicker td.active.disabled,
-.datepicker td.active:hover.disabled, .datepicker td.active[disabled],
-.datepicker td.active:hover[disabled] {
-  background-color: #04c;
+.popover.bottom-left .arrow:after {
+  content: " ";
+  top: 1px;
+  margin-left: -10px;
+  border-top-width: 0;
+  border-bottom-color: #ffffff;
 }
-
-.datepicker td.active:active, .datepicker td.active:hover:active, .datepicker td.active.active,
-.datepicker td.active:hover.active {
-  background-color: #039 \9;
+.popover.bottom-right {
+  margin-top: 10px;
 }
-
-.datepicker td span {
-  display: block;
-  width: 47px;
-  height: 54px;
-  line-height: 54px;
-  float: left;
-  margin: 2px;
-  cursor: pointer;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+.popover.bottom-right .arrow {
+  left: 50%;
+  margin-left: -11px;
+  border-top-width: 0;
+  border-bottom-color: #999999;
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  top: -11px;
+  left: 90%;
 }
-
-.datepicker td span:hover {
-  background: #eee;
+.popover.bottom-right .arrow:after {
+  content: " ";
+  top: 1px;
+  margin-left: -10px;
+  border-top-width: 0;
+  border-bottom-color: #ffffff;
 }
-
-.datepicker td span.active {
-  background-color: #006dcc;
-  background-image: 0;
-  //background-image: 0 to(#0044cc));
-  background-image: linear-gradient(top, #0088cc, #0044cc);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc',
-          GradientType=0);
-  border-color: #04c #04c #002a80;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-  color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+/*
+ * Timepicker element
+ */
+.timepicker.dropdown-menu {
+  padding: 0 4px;
 }
-
-.datepicker td span.active:hover, .datepicker td span.active:active, .datepicker td span.active.active,
-.datepicker td span.active.disabled, .datepicker td span.active[disabled] {
-  background-color: #04c;
+.timepicker.dropdown-menu button {
+  outline: none;
+  border: 0px;
 }
-
-.datepicker td span.active:active, .datepicker td span.active.active {
-  background-color: #039 \9;
-}
-
-.datepicker td span.old {
-  color: #999;
-}
-
-.datepicker th.switch {
-  width: 145px;
-}
-
-.datepicker th.next, .datepicker th.prev {
-  font-size: 19.5px;
-}
-
-.datepicker thead tr:first-child th {
-  cursor: pointer;
-}
-
-.datepicker thead tr:first-child th:hover {
-  background: #eee;
-}
-
-.input-append.date .add-on i, .input-prepend.date .add-on i {
-  display: block;
-  cursor: pointer;
-  width: 16px;
-  height: 16px;
-}
-
-.bootstrap-timepicker.dropdown-menu {
-  border-radius: 4px 4px 4px 4px;
-  display: none;
-  left: 0;
-  margin-top: 1px;
-  padding: 4px;
-  top: 0;
-  min-width: 10px;
-  z-index: 99999;
-}
-
-.bootstrap-timepicker.dropdown-menu.open {
-  display: inline-block;
-}
-
-.bootstrap-timepicker.dropdown-menu:before {
-  border-bottom: 7px solid rgba(0, 0, 0, 0.2);
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  content: "";
-  left: 6px;
-  position: absolute;
-  top: -7px;
-}
-
-.bootstrap-timepicker.dropdown-menu:after {
-  border-bottom: 6px solid #FFFFFF;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  content: "";
-  left: 7px;
-  position: absolute;
-  top: -6px;
-}
-
-.bootstrap-timepicker.modal {
-  margin-left: -100px;
-  margin-top: 0;
-  top: 30%;
-  width: 200px;
-}
-
-.bootstrap-timepicker.modal .modal-content {
-  padding: 0;
-}
-
-.bootstrap-timepicker table {
-  margin: 0;
-  width: 100%;
-}
-
-.bootstrap-timepicker table td {
-  height: 30px;
-  margin: 0;
-  padding: 2px;
-  text-align: center;
-}
-
-.bootstrap-timepicker table td span {
-  width: 100%;
-}
-
-.bootstrap-timepicker table td a {
-  border: 1px solid transparent;
-  display: inline-block;
-  margin: 0;
-  outline: 0 none;
-  padding: 8px 0;
-  width: 3em;
-}
-
-.bootstrap-timepicker table td a:hover {
-  background-color: #EEEEEE;
-  border-color: #DDDDDD;
-  border-radius: 4px 4px 4px 4px;
-}
-
-.bootstrap-timepicker table td a i {
-  margin-top: 2px;
-}
-
-.bootstrap-timepicker table td input {
-  margin: 0;
-  text-align: center;
-  width: 25px;
-}
-
-.bootstrap-timepicker-component .add-on {
-  cursor: pointer;
-}
-
-.bootstrap-timepicker-component .add-on i {
-  display: block;
-  height: 16px;
-  width: 16px;
+.timepicker.dropdown-menu tbody button {
+  padding: 6px;
 }
 
 .time-tip {
