--- a/app/views/messages/inbox.jade
+++ b/app/views/messages/inbox.jade
@@ -1,7 +1,7 @@
 .tab-header
 	h3.pull-left {{ui.message.inbox}}
 	form.pull-right
-		input.col-md-12.search-query(type='text',
+		input.form-control.search-query(type='text',
 		placeholder='{{ui.message.ph_filterMessage}}',
 		ng-model='query.inbox')
 hr
