--- a/app/views/messages/outbox.jade
+++ b/app/views/messages/outbox.jade
@@ -1,7 +1,7 @@
 .tab-header
 	h3.pull-left {{ui.message.outbox}}
 	form.pull-right
-		input.col-md-12.search-query(type='text',
+		input.form-control.search-query(type='text',
 		placeholder='{{ui.message.filterMessages}}',
 		ng-model='query.outbox')
 hr
