--- a/app/views/messages/trash.jade
+++ b/app/views/messages/trash.jade
@@ -5,7 +5,7 @@
 			i.glyphicon.glyphicon-trash.glyphicon-white
 			| {{ui.message.emptyTrash}}
 	form.pull-right
-		input.col-md-12.search-query(type='text',
+		input.form-control.search-query(type='text',
 		placeholder='{{ui.message.filterMessages}}',
 		ng-model='query.trash')
 hr
