--- a/app/views/groups.jade
+++ b/app/views/groups.jade
@@ -11,14 +11,15 @@
     class="{{(views.member==true) && 'active'}}",
     ng-click='newMemberForm(); setViewTo("member")') {{ui.groups.newMember}}
 
-  form.form-search.pull-right(ng-submit='searchMembers(search.query)')
-    .input-append
-      input.col-md-2.search-query(type='text',
+  form.col-sm-3.col-lg-2.pull-right(ng-submit='searchMembers(search.query)')
+    .input-group
+      input.form-control.search-query(type='text',
       placeholder='{{ui.groups.searchFor}}',
       ng-model='search.query')
-      button.btn.btn-default(type='submit')
-        i.glyphicon.glyphicon-search
-        | &nbsp;{{ui.groups.search}}
+      span.input-group-btn
+        button.btn.btn-default(type='submit')
+          i.glyphicon.glyphicon-search
+          | &nbsp;{{ui.groups.search}}
 
 .tabbable.tabs-left
 
@@ -59,10 +60,10 @@
       hr
       form
         fieldset
-          .control-group
-            label.control-label {{ui.groups.name}}
-            .controls
-              input.col-md-4(type='text', ng-model='groupForm.name')
+          .form-group
+            .col-sm-4
+              label.control-label {{ui.groups.name}}
+              input.form-control(type='text', ng-model='groupForm.name')
           .form-actions
             button.btn.btn-success(type='submit',
             ng-click='groupSubmit(groupForm)') {{ui.groups.saveGroup}}
@@ -228,15 +229,11 @@
     div#groupTab.tab-pane(class="{{(views.view==true) && 'active'}}")
       .tab-header
         .pull-left
-          select(ng-model='current',
+          select.form-control(ng-model='current',
           ng-options='group.uuid as group.name for group in groups',
           ng-selected='current',
           ng-change='requestGroup(current); sorter="resources.lastName"; reverse=false;')
         .pull-right
-          input.col-md-2.search-query(type='text',
-          placeholder='{{ui.groups.filterMembers}}',
-          style='margin-right: 5px;',
-          ng-model='filtered')
           button.btn.btn-default(type='button',
           style='margin-right: 5px;',
           data-content-template="views/groups-wish.html",
@@ -252,6 +249,10 @@
           button.btn.btn-danger(type='button', ng-click='confirmGroupDelete(group.uuid)')
             i.glyphicon.glyphicon-trash.glyphicon-white
             | &nbsp;{{ui.groups.deleteGroup}}
+        .pull-right(style='margin-right: 5px;')
+          input.form-control.search-query(type='text',
+          placeholder='{{ui.groups.filterMembers}}',
+          ng-model='filtered')
       hr
       p(ng-hide='(data.members[group.uuid]|filter:filtered|filterSupers).length > 0')
         | {{ui.groups.noMembers}}
