--- a/app/views/planboard/time-slot.jade
+++ b/app/views/planboard/time-slot.jade
@@ -1,4 +1,4 @@
-div.row-fluid(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || views.member')
+div.row(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || views.member')
   form.form-inline.form-toggled.well
     button.close(ng-click='resetInlineForms()') ×
     h4(ng-show='views.slot.add') {{ui.planboard.newAvail}}
@@ -9,38 +9,38 @@ div.row-fluid(ng-show='views.slot.add || views.slot.edit || views.group || views
     hr
     .form-elements-group(ng-show='browser.mobile')
       label {{ui.planboard.from}}
-      .control-group.dater-mobile(ng-show='views.slot.add || views.slot.edit || views.wish')
-        input(name='date-start', type='datetime-local', ng-model='slot.start.datetime')
-      .control-group.dater-mobile(ng-show='views.group || views.member')
-        input(name='date-start',
+      .form-group.dater-mobile(ng-show='views.slot.add || views.slot.edit || views.wish')
+        input.form-control.input-sm(name='date-start', type='datetime-local', ng-model='slot.start.datetime')
+      .form-group.dater-mobile(ng-show='views.group || views.member')
+        input.form-control.input-sm(name='date-start',
         type='datetime-local',
         ng-model='slot.start.datetime',
         disabled='disabled')
     .form-elements-group(ng-hide='browser.mobile')
       label {{ui.planboard.from}}
-      .control-group.dater(ng-show='views.slot.add || views.slot.edit || views.wish')
-        input(name='date-start',
+      .form-group.has-feedback.dater(ng-show='views.slot.add || views.slot.edit || views.wish')
+        input.form-control.input-sm(name='date-start',
         type='text',
         ng-model='slot.start.date',
         data-date-type='string',
         data-date-format='dd-MM-yyyy',
         bs-datepicker='')
-        i.icon-calendar
-      .control-group.dater(ng-show='views.group || views.member')
-        input(name='date-start', type='text', ng-model='slot.start.date', disabled='disabled')
-        i.icon-calendar
-      .control-group.timer(ng-show='views.slot.add || views.slot.edit || views.wish')
-        input(name='time-start', type='text', ng-model='slot.start.time', bs-timepicker='bs-timepicker')
-        i.icon-time
-      .control-group.timer(ng-show='views.group || views.member')
-        input(name='time-start', type='text', ng-model='slot.start.time', disabled='disabled')
-        i.icon-time
+        i.glyphicon.glyphicon-calendar.form-control-feedback
+      .form-group.has-feedback.dater(ng-show='views.group || views.member')
+        input.form-control.input-sm(name='date-start', type='text', ng-model='slot.start.date', disabled='disabled')
+        i.glyphicon.glyphicon-calendar.form-control-feedback
+      .form-group.has-feedback.timer(ng-show='views.slot.add || views.slot.edit || views.wish')
+        input.form-control.input-sm(name='time-start', type='text', ng-model='slot.start.time', bs-timepicker='')
+        i.glyphicon.glyphicon-time.form-control-feedback
+      .form-group.has-feedback.timer(ng-show='views.group || views.member')
+        input.form-control.input-sm(name='time-start', type='text', ng-model='slot.start.time', disabled='disabled')
+        i.glyphicon.glyphicon-time.form-control-feedback
     .form-elements-group(ng-show='browser.mobile')
       label {{ui.planboard.till}}
-      .control-group.dater-mobile(ng-show='views.slot.add || views.slot.edit || views.wish')
-        input(name='date-start', type='datetime-local', ng-model='slot.end.datetime')
-      .control-group.dater-mobile(ng-show='views.group || views.member')
-        input(name='date-start',
+      .form-group.dater-mobile(ng-show='views.slot.add || views.slot.edit || views.wish')
+        input.form-control.input-sm(name='date-start', type='datetime-local', ng-model='slot.end.datetime')
+      .form-group.dater-mobile(ng-show='views.group || views.member')
+        input.form-control.input-sm(name='date-start',
         type='datetime-local',
         ng-model='slot.end.datetime',
         disabled='disabled')
@@ -48,23 +48,23 @@ div.row-fluid(ng-show='views.slot.add || views.slot.edit || views.group || views
       br
     .form-elements-group(ng-hide='browser.mobile')
       label {{ui.planboard.till}}
-      .control-group.dater(ng-show='views.slot.add || views.slot.edit || views.wish')
-        input(name='date-end',
+      .form-group.has-feedback.dater(ng-show='views.slot.add || views.slot.edit || views.wish')
+        input.form-control.input-sm(name='date-end',
         type='text',
         ng-model='slot.end.date',
         data-date-type='string',
         data-date-format='dd-MM-yyyy',
         bs-datepicker='')
-        i.icon-calendar
-      .control-group.dater(ng-show='views.group || views.member')
-        input(name='date-end', type='text', ng-model='slot.end.date', disabled='disabled')
-        i.icon-calendar
-      .control-group.timer(ng-show='views.slot.add || views.slot.edit || views.wish')
-        input(name='time-end', type='text', ng-model='slot.end.time', bs-timepicker='bs-timepicker')
-        i.icon-time
-      .control-group.timer(ng-show='views.group || views.member')
-        input(name='time-end', type='text', ng-model='slot.end.time', disabled='disabled')
-        i.icon-time
+        i.glyphicon.glyphicon-calendar.form-control-feedback
+      .form-group.has-feedback.dater(ng-show='views.group || views.member')
+        input.form-control.input-sm(name='date-end', type='text', ng-model='slot.end.date', disabled='disabled')
+        i.glyphicon.glyphicon-calendar.form-control-feedback
+      .form-group.has-feedback.timer(ng-show='views.slot.add || views.slot.edit || views.wish')
+        input.form-control.input-sm(name='time-end', type='text', ng-model='slot.end.time', bs-timepicker='')
+        i.glyphicon.glyphicon-time.form-control-feedback
+      .form-group.has-feedback.timer(ng-show='views.group || views.member')
+        input.form-control.input-sm(name='time-end', type='text', ng-model='slot.end.time', disabled='disabled')
+        i.glyphicon.glyphicon-time.form-control-feedback
     .form-elements-group(ng-show='views.slot.add || views.slot.edit || views.member')
       label {{ui.planboard.state}}
       select(ng-model='slot.state',
