--- a/app/styles/app/_styles.scss
+++ b/app/styles/app/_styles.scss
@@ -86,7 +86,7 @@ dl {
 }
 
 .label-inset,
-.badge-inset {
+.badge.badge-inset {
   background-color: #6f9a6d;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.30);
 }
