Fix planboard input styles

--- a/app/styles/app/_timeline.scss
+++ b/app/styles/app/_timeline.scss
@@ -74,12 +74,11 @@
               display: block;
               font-size: 38px;
               font-weight: bold;
-              padding-top: 18px;
             }
 
             .percentage {
               display: block;
-              padding-top: 10px;
+              margin-top: -5px;
             }
           }
 
