--- a/app/views/planboard/time-travel.jade
+++ b/app/views/planboard/time-travel.jade
@@ -2,9 +2,9 @@ div#timeline-controls.row(ng-controller='timeline-navigation')
 
   .pull-left(style='margin-top: 10px;')
 
-    .control-group.pull-left(style='margin-right: 10px;')
-      input(type='text', style='width: 190px;', name='daterange', ng-model='daterange', daterangepicker='')
-      i.glyphicon.glyphicon-calendar(style='position: relative; margin: -3px 0 0 -24px;')
+    .form-group.has-feedback.pull-left.dateranger
+      input.form-control(type='text', name='daterange', ng-model='daterange', daterangepicker='')
+      i.glyphicon.glyphicon-calendar.form-control-feedback
 
     .btn-group.pull-left(style='margin-right: 5px;')
       button.btn.btn-default(type='button', ng-model='timeline.scope.day', ng-click='timelineScoper("day")', class="{{(timeline.scope.day==true) && 'active'}}")
