Temp ignore responsiveness

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,7 +4,7 @@
 // Core variables and mixins
 @import "variables";
 // Modify this for custom colors, font-sizes, etc
-@import "mixins";
+// @import "mixins";
 /**
  * App styles
  */
