--- a/app/styles/responsive.scss
+++ b/app/styles/responsive.scss
@@ -16,27 +16,27 @@
 
 @import "variables";
 // Modify this for custom colors, font-sizes, etc
-@import "mixins";
+// @import "mixins";
 
 // RESPONSIVE CLASSES
 // ------------------
 
-@import "responsive/responsive-utilities";
+// @import "responsive/responsive-utilities";
 
 // MEDIA QUERIES
 // ------------------
 
 // Large desktops
-@import "responsive/responsive-1200px-min";
+// @import "responsive/responsive-1200px-min";
 
 // Tablets to regular desktops
-@import "responsive/responsive-768px-979px";
+// @import "responsive/responsive-768px-979px";
 
 // Phones to portrait tablets and narrow desktops
-@import "responsive/responsive-767px-max";
+// @import "responsive/responsive-767px-max";
 
 // RESPONSIVE NAVBAR
 // ------------------
 
 // From 979px and below, show a button to toggle navbar contents
-@import "responsive/responsive-navbar";
+// @import "responsive/responsive-navbar";
