--- a/app/views/messages.jade
+++ b/app/views/messages.jade
@@ -6,7 +6,7 @@
 			ng-click='composeMessage(); setViewTo("compose")')
 				| {{ui.message.composeAMessage}}
 
-.row
+div
 	.tabbable.tabs-left
 
 		ul.nav.nav-tabs.nav-tabs-app(style='margin-right: 0px;')
