--- a/app/views/planboard.jade
+++ b/app/views/planboard.jade
@@ -5,7 +5,7 @@ section#planboard(ng-controller='timeline')
   time-travel
   time-slot
 
-  div.row
+  div
     .tabbable.tabs-left
       ul.nav.nav-tabs.nav-tabs-app(style='margin-right: 0px;')
         li.active
