--- a/app/views/planboard/time-travel.jade
+++ b/app/views/planboard/time-travel.jade
@@ -1,5 +1,4 @@
-div#timeline-controls.row(ng-controller='timeline-navigation')
-
+div#timeline-controls(ng-controller='timeline-navigation')
   .pull-left(style='margin-top: 10px;')
 
     .form-group.has-feedback.pull-left.dateranger
