--- a/app/styles/app/_dashboard.scss
+++ b/app/styles/app/_dashboard.scss
@@ -407,9 +407,7 @@
   position: relative;
 
   .sa-state {
-    position: absolute;
-    top: 10px;
-    right: 0;
+    margin-top: 10px;
   }
 
   ul.sa-setup {
