--- a/app/views/planboard/time-slot.jade
+++ b/app/views/planboard/time-slot.jade
@@ -1,4 +1,4 @@
-div.row(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || views.member')
+div(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || views.member')
   form.form-inline.form-toggled.well
     button.close(ng-click='resetInlineForms()') ×
     h4(ng-show='views.slot.add') {{ui.planboard.newAvail}}
