--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -575,14 +575,14 @@ $jumbotron-font-size:            ceil(($font-size-base * 1.5));
 //
 //## Define colors for form feedback states and, by default, alerts.
 
-$state-success-text:             #6f9a6d;
+$state-success-text:             $white;
 // $state-success-text:             #3c763d;
 $state-success-bg:               #6f9a6d;
 // $state-success-bg:               #dff0d8;
 $state-success-border:           darken(adjust-hue($state-success-bg, -10), 5%);
 // $state-success-border:           darken(adjust-hue($state-success-bg, -10), 5%);
 
-$state-info-text:                #35a8c9;
+$state-info-text:                $white;
 // $state-info-text:                #31708f;
 $state-info-bg:                  #57a9bf;
 // $state-info-bg:                  #d9edf7;
@@ -596,7 +596,7 @@ $state-warning-bg:               #e6e4da;
 $state-warning-border:           darken(adjust-hue($state-warning-bg, -10), 3%);
 // $state-warning-border:           darken(adjust-hue($state-warning-bg, -10), 5%);
 
-$state-danger-text:              #ba5855;
+$state-danger-text:              $white;
 // $state-danger-text:              #a94442;
 $state-danger-bg:                #ba5855;
 // $state-danger-bg:                #f2dede;
