--- a/app/views/groups.jade
+++ b/app/views/groups.jade
@@ -76,10 +76,9 @@
       hr
       form
         fieldset
-          .control-group
+          .form-group
             label.control-label {{ui.groups.name}}
-            .controls
-              input.col-md-4(type='text', ng-model='groupForm.name')
+              input.form-control.col-md-4(type='text', ng-model='groupForm.name')
           .form-actions
             button.btn.btn-success(type='submit',
             ng-click='groupSubmit(groupForm)') {{ui.groups.saveGroup}}
@@ -93,14 +92,12 @@
       hr
       form(name='registerUserForm')
         fieldset
-          .control-group
+          .form-group
             label.control-label {{ui.groups.role}}
-            .controls
-              select(ng-model='memberForm.role', ng-options='role.label for role in roles')
+              select.form-control(ng-model='memberForm.role', ng-options='role.label for role in roles')
                 option(value='') {{ui.groups.selectRole}}
-          .control-group
+          .form-group
             label.control-label {{ui.groups.groups}}
-            .controls
               select.chzn-select(data-placeholder='',
               multiple='multiple',
               style='width: 530px;',
@@ -109,18 +106,15 @@
               ng-options='group.name for group in data.groups')
               // <p ng-repeat="group in memberForm.groups"><strong>{{group.uuid}}</strong></p>
           hr
-          .control-group
+          .form-group
             label.control-label {{ui.groups.firstName}}
-            .controls
-              input.col-md-4(type='text', ng-model='memberForm.firstName')
-          .control-group
+              input.form-control.col-md-4(type='text', ng-model='memberForm.firstName')
+          .form-group
             label.control-label {{ui.groups.lastName}}
-            .controls
-              input.col-md-4(type='text', ng-model='memberForm.lastName')
-          .control-group
+              input.form-control.col-md-4(type='text', ng-model='memberForm.lastName')
+          .form-group
             label.control-label {{ui.groups.email}}
-            .controls
-              input.col-md-4(type='email',
+              input.form-control.col-md-4(type='email',
               name='email',
               ng-model='memberForm.EmailAddress',
               ng-minlength='3',
@@ -135,10 +129,9 @@
                 p.text-danger(ng-show='registerUserForm.email.$error.maxlength')
                   small
                     i {{ui.errors.email.max}}
-          .control-group
+          .form-group
             label.control-label {{ui.groups.phone}}
-            .controls
-              input#inputPhoneNumber.col-md-3(type='text',
+              input.form-control#inputPhoneNumber.col-md-3(type='text',
               ng-model='memberForm.PhoneAddress',
               ng-change='phoneNumberParser(memberForm.PhoneAddress)')
               // <p class="text-danger" ng-show="!memberForm.PhoneAddress">
@@ -150,27 +143,22 @@
               p.text-success(ng-show='phoneNumberParsed.result')
                 small
                   i {{phoneNumberParsed.message}}
-          .control-group
+          .form-group
             label.control-label {{ui.profile.pagerId}}
-            .controls
-              input.col-md-5(type='text', ng-model='memberForm.pagerId')
-          .control-group
+              input.form-control.col-md-5(type='text', ng-model='memberForm.pagerId')
+          .form-group
             label.control-label {{ui.groups.address}}
-            .controls
-              input.col-md-5(type='text', ng-model='memberForm.PostAddress')
-          .control-group
+              input.form-control.col-md-5(type='text', ng-model='memberForm.PostAddress')
+          .form-group
             label.control-label {{ui.groups.postCode}}
-            .controls
-              input.col-md-2(type='text', ng-model='memberForm.PostZip')
-          .control-group
+              input.form-control.col-md-2(type='text', ng-model='memberForm.PostZip')
+          .form-group
             label.control-label {{ui.groups.city}}
-            .controls
-              input.col-md-3(type='text', ng-model='memberForm.PostCity')
+              input.form-control.col-md-3(type='text', ng-model='memberForm.PostCity')
           hr
-          .control-group
+          .form-group
             label.control-label {{ui.groups.userName}}
-            .controls
-              input.col-md-3(type='text',
+              input.form-control.col-md-3(type='text',
               ng-model='memberForm.username',
               ng-change='userExists()')
               p.text-danger(ng-hide='userExistsValidation')
@@ -179,10 +167,9 @@
               p.text-success(ng-show='userExistsValidation && memberForm.username.length > 0')
                 small
                   i {{ui.groups.registerUserName.goodToGo}}
-          .control-group
+          .form-group
             label.control-label {{ui.groups.password}}
-            .controls
-              input.col-md-3(type='password', ng-model='memberForm.password')
+              input.form-control.col-md-3(type='password', ng-model='memberForm.password')
           .form-actions
             button.btn.btn-success(type='submit',
             ng-click='memberSubmit(memberForm)') {{ui.groups.saveMember}}
