--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,6 +3,8 @@
  */
 // Core variables and mixins
 @import "variables";
+@import "../vendors/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap/variables";
+@import "../vendors/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap/mixins";
 // Modify this for custom colors, font-sizes, etc
 // @import "mixins";
 /**
