--- a/app/views/messages-scheadule-item.jade
+++ b/app/views/messages-scheadule-item.jade
@@ -1,7 +1,14 @@
 .scheadule
   .timer
-    input(name='time-start', type='text', ng-model='s.time', bs-timepicker='bs-timepicker')
-    i.glyphicon.glyphicon-time
+    .form-group.has-feedback
+      input.form-control(name='time-start',
+      type='text',
+      ng-model='s.time',
+      data-length='1',
+      data-time-type="string",
+      data-time-format="HH:mm",
+      bs-timepicker='')
+      i.glyphicon.glyphicon-time.form-control-feedback
   ul
     li
       label(for='monday-{{s.exact}}')
