--- a/app/views/planboard/time-slot.jade
+++ b/app/views/planboard/time-slot.jade
@@ -30,7 +30,13 @@ div(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || v
         input.form-control.input-sm(name='date-start', type='text', ng-model='slot.start.date', disabled='disabled')
         i.glyphicon.glyphicon-calendar.form-control-feedback
       .form-group.has-feedback.timer(ng-show='views.slot.add || views.slot.edit || views.wish')
-        input.form-control.input-sm(name='time-start', type='text', ng-model='slot.start.time', bs-timepicker='')
+        input.form-control.input-sm(name='time-start',
+        type='text',
+        ng-model='slot.start.time',
+        data-length='1',
+        data-time-type="string",
+        data-time-format="HH:mm",
+        bs-timepicker='')
         i.glyphicon.glyphicon-time.form-control-feedback
       .form-group.has-feedback.timer(ng-show='views.group || views.member')
         input.form-control.input-sm(name='time-start', type='text', ng-model='slot.start.time', disabled='disabled')
@@ -60,7 +66,13 @@ div(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || v
         input.form-control.input-sm(name='date-end', type='text', ng-model='slot.end.date', disabled='disabled')
         i.glyphicon.glyphicon-calendar.form-control-feedback
       .form-group.has-feedback.timer(ng-show='views.slot.add || views.slot.edit || views.wish')
-        input.form-control.input-sm(name='time-end', type='text', ng-model='slot.end.time', bs-timepicker='')
+        input.form-control.input-sm(name='time-end',
+        type='text',
+        ng-model='slot.end.time',
+        data-length='1',
+        data-time-type="string",
+        data-time-format="HH:mm",
+        bs-timepicker='')
         i.glyphicon.glyphicon-time.form-control-feedback
       .form-group.has-feedback.timer(ng-show='views.group || views.member')
         input.form-control.input-sm(name='time-end', type='text', ng-model='slot.end.time', disabled='disabled')
