--- a/app/views/messages.jade
+++ b/app/views/messages.jade
@@ -49,17 +49,19 @@ div
 				hr
 				form(ng-controller='scheaduler')
 					fieldset
-						.control-group
+						.form-group
 							label.control-label {{ui.message.broadcast}}
-							input(type='checkbox',
-							ng-model='broadcast.sms',
-							ng-hide='StandBy.resources.role > 2',
-							style="margin:-3px 5px 0 0",
-							id="broadcastSmsCheckBox")
-							label(for='broadcastSmsCheckBox', style='display: inline;')
-								span(ng-hide='StandBy.resources.role > 2') {{ui.message.sms}}
-							input#broadcastEmailCheckBox(type='checkbox', ng-model='broadcast.email', style='margin: -3px 5px 0 15px;')
-							label(for='broadcastEmailCheckBox', style='display: inline;') {{ui.message.email}}
+							div
+								input#broadcastSmsCheckBox(type='checkbox',
+								ng-model='broadcast.sms',
+								ng-hide='StandBy.resources.role > 2',
+								style="margin: 0 2px 0 0")
+								label(for='broadcastSmsCheckBox')
+									span(ng-hide='StandBy.resources.role > 2') {{ui.message.sms}}
+								input#broadcastEmailCheckBox(type='checkbox',
+								ng-model='broadcast.email',
+								style='margin: 0 2px 0 10px;')
+								label(for='broadcastEmailCheckBox') {{ui.message.email}}
 
 						.form-group(style='width: 530px;')
 							label.control-label {{ui.message.receviers}}
@@ -69,15 +71,15 @@ div
 							ng-model='message.receivers',
 							ng-options='receiver.name group by receiver.group for receiver in receviersList | orderBy:"lastName"')
 
-						.control-group
+						.form-group
 							label.control-label {{ui.message.subject}}
-							input.col-md-5(type='text', ng-model='message.subject', placeholder='{{ui.message.typeSubject}}')
+							input.form-control(type='text', ng-model='message.subject', placeholder='{{ui.message.typeSubject}}')
 
-						.control-group
+						.form-group
 							label.control-label {{ui.message.message}}
-							textarea.col-md-7(rows='7', ng-model='message.body')
+							textarea.form-control(rows='7', ng-model='message.body')
 
-						.control-group(ng-hide='StandBy.resources.role > 1')
+						.form-group(ng-hide='StandBy.resources.role > 1')
 							label.control-label {{ui.message.repeat}}
 							.btn-group(data-toggle='buttons-radio')
 								button.btn.btn-default.btn-sm(type='button',
@@ -96,17 +98,17 @@ div
 									button.btn.btn-sm.btn-success(type='button', ng-click='addNewOffset()')
 										| {{ui.message.repeatNew}}
 							hr
-							.control-group
+							.form-group
 								label.control-label {{ui.message.notificationLabel}}
-								input.col-md-6(type='text', ng-model='scheaduled.title', placeholder='{{ui.message.notificationLabel}}')
+								input.form-control.col-md-6(type='text', ng-model='scheaduled.title', placeholder='{{ui.message.notificationLabel}}')
 
-							.control-group(ng-hide='scheaduleCount > 0')
+							.form-group(ng-hide='scheaduleCount > 0')
 								label.control-label {{ui.message.notifications}}
-								p.muted
+								p.text-muted
 									small
 										i {{ui.message.notificationsEmpty}}
 
-							.control-group(ng-show='scheaduleCount > 0')
+							.form-group(ng-show='scheaduleCount > 0')
 								label.control-label {{ui.message.notifications}}
 								span(style='font-size: 11px;', ng-repeat='o in offsets')
 									| {{o}}
@@ -115,15 +117,14 @@ div
 								div(ng-repeat='offset in scheaduled.offsets')
 									notification-item(scheadule='offset', remover='remover()')
 
-						.form-actions
+						.form-group
 							div(ng-show='scheaduled.uuid || scheaduled.status')
-								button(type='submit', ng-hide='scheaduleCount > 0')
-									| class="btn btn-success disabled"git a
+								button(type='submit', ng-hide='scheaduleCount > 0', class="btn btn-success disabled")
 									| {{ui.message.notificationSave}}
 								button(type='submit',
 								ng-click='scheaduler.save(message, broadcast, scheaduled)',
-								ng-show='scheaduleCount > 0')
-									| class="btn btn-success"
+								ng-show='scheaduleCount > 0',
+								class="btn btn-success")
 									| {{ui.message.notificationSave}}
 							button.btn.btn-success(type='submit',
 							ng-hide='scheaduled.uuid || scheaduled.status',
