--- a/app/views/messages/trash.jade
+++ b/app/views/messages/trash.jade
@@ -3,7 +3,7 @@
 	.pull-right(style='margin-left: 10px;')
 		button.btn.btn-danger.pull-left(type='button', ng-click='emptyTrash()')
 			i.glyphicon.glyphicon-trash.glyphicon-white
-			| {{ui.message.emptyTrash}}
+			| &nbsp;{{ui.message.emptyTrash}}
 	form.pull-right
 		input.form-control.search-query(type='text',
 		placeholder='{{ui.message.filterMessages}}',
