--- a/app/views/planboard/time-slot.jade
+++ b/app/views/planboard/time-slot.jade
@@ -24,6 +24,8 @@ div(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || v
         ng-model='slot.start.date',
         data-date-type='string',
         data-date-format='dd-MM-yyyy',
+        data-icon-left='glyphicon glyphicon-arrow-left',
+        data-icon-right='glyphicon glyphicon-arrow-right',
         bs-datepicker='')
         i.glyphicon.glyphicon-calendar.form-control-feedback
       .form-group.has-feedback.dater(ng-show='views.group || views.member')
@@ -33,7 +35,7 @@ div(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || v
         input.form-control.input-sm(name='time-start',
         type='text',
         ng-model='slot.start.time',
-        data-length='1',
+        data-length='3',
         data-time-type="string",
         data-time-format="HH:mm",
         bs-timepicker='')
@@ -60,6 +62,8 @@ div(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || v
         ng-model='slot.end.date',
         data-date-type='string',
         data-date-format='dd-MM-yyyy',
+        data-icon-left='glyphicon glyphicon-arrow-left',
+        data-icon-right='glyphicon glyphicon-arrow-right',
         bs-datepicker='')
         i.glyphicon.glyphicon-calendar.form-control-feedback
       .form-group.has-feedback.dater(ng-show='views.group || views.member')
@@ -69,7 +73,7 @@ div(ng-show='views.slot.add || views.slot.edit || views.group || views.wish || v
         input.form-control.input-sm(name='time-end',
         type='text',
         ng-model='slot.end.time',
-        data-length='1',
+        data-length='3',
         data-time-type="string",
         data-time-format="HH:mm",
         bs-timepicker='')
