Change the color of the slim alarmeren to red if not assigned

--- a/app/styles/app/_dashboard.scss
+++ b/app/styles/app/_dashboard.scss
@@ -465,6 +465,10 @@
           }
         }
 
+        .sa-icon-not-assigned {
+          background-color: #d24545
+        }
+
         .sa-icon-driver {
           // background-color: #253943;
           background-color: #f6e500;
