Fix login progress bar

--- a/app/views/login/preloaded.jade
+++ b/app/views/login/preloaded.jade
@@ -2,5 +2,6 @@
   img(ng-src='{{StandBy.config.profile.logos.login}}',
   alt='{{StandBy.config.profile.title}}')
   h4 {{ui.login.setting_up_app}}
-  .progress.progress-striped.active: .progress-bar
+  .progress
+    .progress-bar-striped.active.progress-bar
   span.text-muted
