Fix login page styles

--- a/app/views/login/forgot-password.jade
+++ b/app/views/login/forgot-password.jade
@@ -1,5 +1,5 @@
 #forgot.boxed(ng-show='views.forgot')
-	form(ng-submit='forgot()')
+	form.form-group(ng-submit='forgot()')
 		img(ng-src='{{StandBy.config.profile.logos.login}}',
 		alt='{{StandBy.config.profile.title}}')
 		h4.form-signin-heading
@@ -9,7 +9,7 @@
 			button.close(type='button',
 			ng-click='alert.forget=false') ×
 			| {{alert.forget.message}}
-		input(type='text',
+		input.form-control(type='text',
 		ng-model='remember.id',
 		placeholder='{{ui.login.placeholder_username}}')
 		button.btn.btn-lg.btn-primary(type='submit')
