--- a/app/views/login/login-help.jade
+++ b/app/views/login/login-help.jade
@@ -1,6 +1,6 @@
 #login.boxed(ng-show='views.help',
 ng-hide='views.login || views.forgot || views.changePass')
-  form
+  form.form-group
     img(ng-src='{{StandBy.config.profile.logos.login}}',
     alt='{{StandBy.config.profile.title}}')
     h4.form-signin-heading {{ui.help.help}}
