--- a/app/views/login/change-password.jade
+++ b/app/views/login/change-password.jade
@@ -1,5 +1,5 @@
 #changePass.boxed(ng-show='views.changePass')
-  form(ng-submit='changePass()')
+  form.form-group(ng-submit='changePass()')
     img(ng-src='{{StandBy.config.profile.logos.login}}',
     alt='{{StandBy.config.profile.title}}')
     h4.form-signin-heading {{changepass.uuid}}
@@ -7,10 +7,10 @@
     ng-show='alert.changePass.display')
       button.close(type='button', ng-click='alert.changePass=false') ×
       | {{alert.changePass.message}}
-    input(type='password',
+    input.form-control(type='password',
     ng-model='changeData.newPass',
     placeholder='{{ui.login.ph_newPass}}')
-    input(type='password',
+    input.form-control(type='password',
     ng-model='changeData.retypePass',
     placeholder='{{ui.login.ph_retypePass}}')
     button.btn.btn-lg.btn-primary(type='submit')
