--- a/app/views/login/download-mobile-app.jade
+++ b/app/views/login/download-mobile-app.jade
@@ -1,5 +1,5 @@
 .row
-  .btn-group.download-button(style='width: 190px; {{browser.screen.width > 768 && "padding-left: 25px"}}')
+  .btn-group.download-button(style='width: 190px;')
     button.btn.btn-success.dropdown-toggle(data-toggle='dropdown', style='width: 190px')
       | Download mobiele app {{position}}
     ul.dropdown-menu.pull-right
