--- a/app/views/login/login-form.jade
+++ b/app/views/login/login-form.jade
@@ -1,6 +1,6 @@
 #login.boxed(ng-show='views.login',
 ng-hide='views.help || views.changePass')
-	form(ng-submit='login()')
+	form.form-group(ng-submit='login()')
 		img(ng-src='{{StandBy.config.profile.logos.login}}',
 		alt='{{StandBy.config.profile.title}}')
 		h4.form-signin-heading(ng-show='StandBy.config.profile.own')
@@ -12,11 +12,11 @@ ng-hide='views.help || views.changePass')
 			button.close(type='button',
 			ng-click='alert.login=false') ×
 			| {{alert.login.message}}
-		input(type='text',
+		input.form-control(type='text',
 		ng-model='logindata.username',
 		placeholder='{{ui.login.placeholder_username}}',
 		autofocus='autofocus')
-		input(type='password',
+		input.form-control(type='password',
 		ng-model='logindata.password',
 		placeholder='{{ui.login.placeholder_password}}')
 		label.checkbox.col-md-3
